Feat: Add create-account custom directive
The create-account angular custom directive contains the form for users to fill out to create
a new account, it is inserted into main.html.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -27,6 +27,10 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
   }
 }
 
+.main-glyph {
+	font-size: 20em;
+}
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
