--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -6,8 +6,12 @@
 
   <div class="jumbotron text-center">
     <div class="row">
-      <div class="col-md-6">Event</div>
-      <div class="col-md-6">Sign Up</div>
+      <div class="col-xs-4 col-md-6">
+        <span class="glyphicon glyphicon-tent main-glyph"></span>
+      </div>
+      <div class="col-xs-4 col-md-6">
+        <create-account></create-account>
+      </div>
     </div>
   </div>
 
