--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -6,10 +6,10 @@
 
   <div class="jumbotron text-center">
     <div class="row">
-      <div class="col-xs-4 col-md-6">
-        <span class="glyphicon glyphicon-tent main-glyph"></span>
+      <div class="visible-md col-md-4">
+        <i class="glyphicon glyphicon-tent"></i>
       </div>
-      <div class="col-xs-4 col-md-6">
+      <div class="col-xs-12 col-md-8">
         <create-account></create-account>
       </div>
     </div>
