--- a/src/app/components/createAccount/createAccount.html
+++ b/src/app/components/createAccount/createAccount.html
@@ -1,12 +1,12 @@
 <form class="form-signin">
-  <h2 class="form-signin-heading">Create a new account</h2>
-  <label for="inputName" class="sr-only">Name</label>
+  <h2 class="form-signin-heading text-center">Create a new account</h2>
+  <label for="inputName" class="">Name</label>
   <input type="text" id="inputName" class="form-control" placeholder="Name" required autofocus>
-  <label for="inputEmail" class="sr-only">Email address</label>
+  <label for="inputEmail" class="">Email address</label>
   <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-  <label for="inputPassword" class="sr-only">Password</label>
+  <label for="inputPassword" class="">Password</label>
   <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-  <label for="inputPasswordConfirm" class="sr-only">Confirm Password</label>
+  <label for="inputPasswordConfirm" class="">Confirm Password</label>
   <input type="password" id="inputPasswordConfirm" class="form-control" placeholder="Confirm Password" required>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Join Us</button>
 </form>
