--- a/src/app/components/createAccount/createAccount.scss
+++ b/src/app/components/createAccount/createAccount.scss
@@ -1,5 +1,5 @@
 .form-signin {
-  max-width: 330px;
+  max-width: 400px;
   padding: 15px;
   margin: 0 auto;
 }
@@ -32,3 +32,7 @@
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.btn-block  {
+  margin-top: 10px;
+}
+
