--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -20,7 +20,7 @@
         <div class="form-group">
           <input type="password" placeholder="Password" class="form-control">
         </div>
-        <button type="submit" class="btn btn-info">Sign in</button>
+        <button type="submit" class="btn btn-primary">Sign in</button>
       </form>
     </div>
   </div>
