Style: Add Background Image to main page
Add a covering image for the main create account page.

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,8 +1,7 @@
 .acme-navbar-text{
   color: white;
 }
-
-.btn {
-	background: #5AADBB;
+.form-group label {
+	font-size: .9em;
+	color: #FFFFFF;
 }
-
