--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,7 +2,7 @@
   <acme-navbar creation-date="main.creationDate"></acme-navbar>
 </div>
 <div class="container">
-  <div class="jumbotron">
+  <div class="background-image">
     <div class="row">
       <div class="big-logo hidden-xs col-sm-3 col-md-4 col-lg-offset-1">
         <i class="glyphicon glyphicon-tent"></i>
