--- a/src/app/components/createAccount/createAccount.html
+++ b/src/app/components/createAccount/createAccount.html
@@ -1,5 +1,5 @@
 <form class="form-signin">
-  <h2 class="form-signin-heading text-center">Create a new account</h2>
+  <h2 class="form-signin-heading text-center">Create an account</h2>
   <label for="inputName" class="">Name</label>
   <input type="text" id="inputName" class="form-control" placeholder="Name" required autofocus>
   <label for="inputEmail" class="">Email address</label>
