feat: add autocomplete feature to name and email for create account form

--- a/src/app/components/createAccount/createAccount.html
+++ b/src/app/components/createAccount/createAccount.html
@@ -1,9 +1,9 @@
 <form class="form-signin">
   <h2 class="form-signin-heading text-center">Create an account</h2>
   <label for="inputName" class="">Name</label>
-  <input type="text" id="inputName" class="form-control" placeholder="Name" required autofocus>
+  <input type="text" id="inputName" class="form-control" placeholder="Name" required autocomplete="name" autofocus>
   <label for="inputEmail" class="">Email address</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autocomplete="email">
   <label for="inputPassword" class="">Password</label>
   <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
   <label for="inputPasswordConfirm" class="">Confirm Password</label>
