Style: Add 100px of Margin to main elements of create account page.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -30,6 +30,9 @@ body {
   background: url(../assets/images/meeting.png) no-repeat center center fixed;
   background-size: cover;
 }
+#main {
+  margin-top: 100px;
+}
 .big-logo {
   // min-height: 100%;
   min-height: 50vh;
