--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,14 +2,12 @@
   <acme-navbar creation-date="main.creationDate"></acme-navbar>
 </div>
 <div class="container">
-  <div class="background-image">
-    <div class="row">
-      <div class="big-logo hidden-xs col-sm-3 col-md-4 col-lg-offset-1">
-        <i class="glyphicon glyphicon-tent"></i>
-      </div>
-      <div class="col-xs-12 col-sm-offset-3 col-sm-6 col-md-offset-1  col-md-7 col-lg-offset-0 col-lg-7">
-        <create-account></create-account>
-      </div>
+  <div class="row" id="main">
+    <div class="big-logo hidden-xs col-sm-3 col-md-4 col-lg-offset-1">
+      <i class="glyphicon glyphicon-tent"></i>
+    </div>
+    <div class="col-xs-12 col-sm-offset-3 col-sm-6 col-md-offset-1  col-md-7 col-lg-offset-0 col-lg-7">
+      <create-account></create-account>
     </div>
   </div>
 </div>
